[fix] Change ProtectedRoute wrapped element

--- a/SophosApp/src/index.css
+++ b/SophosApp/src/index.css
@@ -21,15 +21,24 @@
 #root {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   margin-inline: auto;
-  padding: 0 2rem;
+  padding: 50px 2rem;
   width: 100%;
   min-width: 320px;
   max-width: 1200px;
-  min-height: 100vh;
+  max-height: 100vh;
   font-family: Figtree, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
 }
 
 @media (prefers-color-scheme: light) {
